--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,6 +18,22 @@ jobs:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
+      - name: console
+        run: |
+          echo "REACT_APP_FIREBASE_API_KEY"
+          echo ${{secrets.REACT_APP_FIREBASE_API_KEY}}
+          echo "REACT_APP_FIREBASE_AUTH_DOMAIN"
+          echo ${{secrets.REACT_APP_FIREBASE_AUTH_DOMAIN}}
+          echo "REACT_APP_FIREBASE_PROJECT_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}
+          echo "REACT_APP_FIREBASE_STORAGE_BUCKET"
+          echo ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
+          echo "REACT_APP_FIREBASE_MESSAGING_SENDER_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}
+          echo "REACT_APP_FIREBASE_APP_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_APP_ID}}
+          echo "REACT_APP_FIREBASE_MEASUREMENT_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}
       - uses: actions/checkout@v2
       - name: Instalar dependecias
         run: npm install
