--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,12 +3,42 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+
+env:
+  REACT_APP_FIREBASE_API_KEY: ${{secrets.REACT_APP_FIREBASE_API_KEY}}
+  REACT_APP_FIREBASE_AUTH_DOMAIN: ${{secrets.REACT_APP_FIREBASE_AUTH_DOMAIN}}
+  REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}
+  REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
+  REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}
+  REACT_APP_FIREBASE_APP_ID: ${{secrets.REACT_APP_FIREBASE_APP_ID}}
+  REACT_APP_FIREBASE_MEASUREMENT_ID: ${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}
+
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
+      - name: console
+        run: |
+          echo "REACT_APP_FIREBASE_API_KEY"
+          echo ${{secrets.REACT_APP_FIREBASE_API_KEY}}
+          echo "REACT_APP_FIREBASE_AUTH_DOMAIN"
+          echo ${{secrets.REACT_APP_FIREBASE_AUTH_DOMAIN}}
+          echo "REACT_APP_FIREBASE_PROJECT_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}
+          echo "REACT_APP_FIREBASE_STORAGE_BUCKET"
+          echo ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
+          echo "REACT_APP_FIREBASE_MESSAGING_SENDER_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}
+          echo "REACT_APP_FIREBASE_APP_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_APP_ID}}
+          echo "REACT_APP_FIREBASE_MEASUREMENT_ID"
+          echo ${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}
       - uses: actions/checkout@v2
+      - name: Instalar dependecias
+        run: npm install
+      - name: Build
+        run: npm run build -- --profile
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
