--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,6 +12,7 @@ env:
   REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID}}
   REACT_APP_FIREBASE_APP_ID: ${{secrets.REACT_APP_FIREBASE_APP_ID}}
   REACT_APP_FIREBASE_MEASUREMENT_ID: ${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}
+  REACT_APP_GOOGLE_MAPS_API_KEY: ${{secrets.REACT_APP_GOOGLE_MAPS_API_KEY}}
 
 jobs:
   build_and_preview:
@@ -34,6 +35,8 @@ jobs:
           echo ${{secrets.REACT_APP_FIREBASE_APP_ID}}
           echo "REACT_APP_FIREBASE_MEASUREMENT_ID"
           echo ${{secrets.REACT_APP_FIREBASE_MEASUREMENT_ID}}
+          echo "REACT_APP_GOOGLE_MAPS_API_KEY"
+          echo ${{secrets.REACT_APP_GOOGLE_MAPS_API_KEY}}
       - uses: actions/checkout@v2
       - name: Instalar dependecias
         run: npm install
