--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.9.0",
     "framer-motion": "^6.5.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.3.0",
